fix spacing

--- a/app/components/kv/view/table/index.styl
+++ b/app/components/kv/view/table/index.styl
@@ -118,6 +118,7 @@
   height 30px
   min-height 30px
   max-height 30px
+  max-width 30px
   border-bottom-width 4px
   white-space nowrap
 
@@ -126,6 +127,7 @@
   height 30px
   border-top-width 4px
   white-space nowrap
+  max-width 30px
 
 
 .kv-col-right
@@ -133,12 +135,15 @@
   min-width 30px
   max-width 30px
   border-left-width 4px
+  overflow visible
 
 .kv-col-left
   width 30px
   min-width 30px
   max-width 30px
   border-right-width 4px
+  direction rtl
+  overflow visible
 
 .kv-cell-container
   padding 0
